# perturb_design

./: LICENSE  README.md  pyproject.toml  requirements.txt
experiments/: real_screens.py  sure_certificate_budget.py  synthetic_subspace.py
perturb_design/: __init__.py  anchored.py  budget.py  certificate.py  sure.py
tests/: test_theorems.py
