[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "perturb_design"
version = "1.0.0"
description = "Gauge-anchored recovery of genetic interactions in combinatorial perturbation screens"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "S. Ali"}]
dependencies = ["numpy>=1.21", "scipy>=1.7"]

[tool.setuptools.packages.find]
include = ["perturb_design*"]
